--- a/SSAugmentedNavigationBar/Base.lproj/Main.storyboard
+++ b/SSAugmentedNavigationBar/Base.lproj/Main.storyboard
@@ -1,25 +1,98 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6162" systemVersion="14A238h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="14A329f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QZn-Kl-Jhj">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6160"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="XhM-8D-oeI">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController id="QZn-Kl-Jhj" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mpc-9S-xId" customClass="SSAugmentedNavigationBar" customModule="SSAugmentedNavigationBar" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Y8S-HU-8Fm" kind="relationship" relationship="rootViewController" id="OJv-f4-6IH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2zr-wv-gXJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2" y="300"/>
+        </scene>
+        <!--Root-->
+        <scene sceneID="4GN-LG-Yel">
+            <objects>
+                <viewController title="Root" id="Y8S-HU-8Fm" customClass="ViewController" customModule="SSAugmentedNavigationBar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="hSL-bU-Gqe"/>
+                        <viewControllerLayoutGuide type="bottom" id="8zN-Dy-i0p"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                    <view key="view" contentMode="scaleToFill" id="GWZ-Pz-Mfw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yHn-3s-Awv">
+                                <rect key="frame" x="176" y="285" width="48" height="30"/>
+                                <state key="normal" title="Push it">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="fNL-VH-xU8" kind="show" id="6iG-42-YUK"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWb-Ea-TJA">
+                                <rect key="frame" x="0.0" y="64" width="600" height="20"/>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="HgI-ta-Czs"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ARg-fT-LA0">
+                                <rect key="frame" x="377.5" y="285" width="45" height="30"/>
+                                <state key="normal" title="MORE">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="addSpace" destination="Y8S-HU-8Fm" eventType="touchUpInside" id="Q8B-yc-Pbo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.54662102460861206" green="1" blue="0.53062039613723755" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="aWb-Ea-TJA" firstAttribute="top" secondItem="hSL-bU-Gqe" secondAttribute="bottom" id="5Py-8G-Pi4"/>
+                            <constraint firstAttribute="centerY" secondItem="ARg-fT-LA0" secondAttribute="centerY" id="7xM-Fy-V4P"/>
+                            <constraint firstAttribute="centerX" secondItem="yHn-3s-Awv" secondAttribute="centerX" multiplier="1.5" id="GGF-WU-5ge"/>
+                            <constraint firstAttribute="centerY" secondItem="yHn-3s-Awv" secondAttribute="centerY" id="Qko-w1-nUs"/>
+                            <constraint firstItem="aWb-Ea-TJA" firstAttribute="width" secondItem="GWZ-Pz-Mfw" secondAttribute="width" id="kFa-LM-tch"/>
+                            <constraint firstAttribute="centerX" secondItem="ARg-fT-LA0" secondAttribute="centerX" multiplier="0.75" id="sEk-GY-Fl0"/>
+                            <constraint firstAttribute="centerX" secondItem="aWb-Ea-TJA" secondAttribute="centerX" id="ti8-F4-acL"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Root" id="3Ga-0N-TBt"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mD6-Xa-A8Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="679" y="300"/>
+        </scene>
+        <!--Detail-->
+        <scene sceneID="IZT-je-yuh">
+            <objects>
+                <viewController title="Detail" id="fNL-VH-xU8" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7bc-xM-bN1"/>
+                        <viewControllerLayoutGuide type="bottom" id="PH2-oE-deP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="laz-TI-vZ0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.99043363332748413" green="0.51665782928466797" blue="0.53786545991897583" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fma-ii-0mo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1420" y="300"/>
         </scene>
     </scenes>
 </document>
